[tool.poetry]
name = "stremio-imvdb"
version = "0.1.0"
description = "Watch 83,000+ music videos from IMVDb in Stremio"
authors = ["Alex Schneider <me@schneider.ax>"]
license = "ISC"

[tool.poetry.scripts]
start = "stremio_imvdb.addon:start"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.5"
parsel = "^1.5"
aiohttp_jinja2 = "^1.1"
jinja2 = "^2.10"
cachetools = "^3.1"
asyncache = "^0.1.1"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}
flake8 = "^3.7"
pep8-naming = "^0.8.2"
pre-commit = "^1.16"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
